# mercury

./: .gitignore  README.md  SPEC.txt  assembler.py  pyproject.toml
examples/: dvd_logo.asm  input_test.asm  moving_counter.asm  noise.asm  palette_strip.asm  splash.asm  streaks.asm
mercury/: __main__.py  cpu.py  display.py  memory.py
mercury/tools/: assembler.py  img_to_merc.py
tools/: assembler.py  img_to_merc.py
